--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 				<nav id="nav">
 					<ul>
 						<li><a href="#one" class="active">About</a></li>
-						<li><a href="#three">A Few Accomplishments</a></li>
-						<li><a href="#two">Things I Can Do</a></li>
+						<li><a href="#two">A Few Accomplishments</a></li>
+						<li><a href="#three">Things I Can Do</a></li>
 						<li><a href="#four">Contact</a></li>
 					</ul>
 				</nav>
@@ -46,20 +46,57 @@
 
 						<!-- One -->
 							<section id="one">
-								<div class="image main" data-position="center">
+								<!-- <div class="image main" data-position="center">
 									<img src="images/banner.jpg" alt="" />
-								</div>
+								</div> -->
 								<div class="container">
 									<header class="major">
 										<!-- <h2>Read Only</h2> -->
-										<p>some quote or some text</p>
+										<p>header text</p>
 									</header>
-									<p>elaboration if needed</p>
+									<p>Welcome to my personal website. I created this space as a hub for sharing my professional and personal interests, accomplishments, and ideas. It’s one part resume, one part portfolio, one part blog.</p>
+									<p></p>
+									<p>I am a product manager at Tableau/Salesforce working at the intersection of data analytics, AI, and Search. These domains have largely been my focus since my time at the University of Michigan, where I studied Data Science, to my first internship at a search start up in Tel Aviv, though my recent launch of Tableau Agent. </p>
+									<p></p>
+									<p>I love working with motivated, high-agency people, and I’m optimistic about a future in which we exploit technological process it increase human flourishing.</p>
 								</div>
 							</section>
 
 						<!-- Two -->
 							<section id="two">
+								<div class="container">
+									<h3>A Few Career Highlights</h3>
+									<!-- <p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p> -->
+									<div class="highlights">
+										<article>
+											<a href="#" class="image"><img src="images/tab_agent.jpg" alt="" /></a>
+											<div class="inner">
+												<h4>Delivered Tableau Agent</h4>
+												<p>Built and launched a conversational AI assistant to help anyone do data analysis in Tableau. Leveraged recent advancements in large language models, vector search, and retrieval augmented generation and scaled the product from proof of concept to pilot to GA.</p>
+											</div>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="next_frontier.png" alt="" /></a>
+											<div class="inner">
+												<h4>Next Frontier</h4>
+												<p>Founded a short-lived AI consultancy to educate LA-based businesses in the B2C and B2B sectors about the AI landscape and help them plan the implementation of their own AI-driven products and services.</p>
+											</div>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+											<div class="inner">
+												<h4>TAMID Fellow</h4>
+												<p>During a summer internship at Cymbio. Built a classifier leveraging dense vector embeddings in order to improve the quality, accuracy, and utility of product recommendations in Cymbio’s affiliate retail stores.</p>
+												<p></p>
+												<p>Since then, I have remained involved in TAMID, connecting Israeli appexchange partners to the TAMID consulting network and fostering relationships between emerging business leaders in the US with the Israeli start-up ecosystem.</p>
+											</div>
+										</article>
+									</div>
+								</div>
+							</section>
+
+						<!-- Three -->
+							<section id="three">
 								<div class="container">
 									<h3>Things I Can Do</h3>
 									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
@@ -74,36 +111,6 @@
 								</div>
 							</section>
 
-						<!-- Three -->
-							<section id="three">
-								<div class="container">
-									<h3>A Few Accomplishments</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
-									<div class="features">
-										<article>
-											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
-											<div class="inner">
-												<h4>Possibly broke spacetime</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
-											</div>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
-											<div class="inner">
-												<h4>Terraformed a small moon</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
-											</div>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
-											<div class="inner">
-												<h4>Snapped dark matter in the wild</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
-											</div>
-										</article>
-									</div>
-								</div>
-							</section>
 
 						<!-- Four -->
 							<section id="four">
