--- a/index.html
+++ b/index.html
@@ -18,22 +18,19 @@
 				<header>
 					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">Joe Constantino</a></h1>
-					<p>Senior Product Manager</p>
-					<!-- <p>Senior Product Manager<br />
-					and now I'm totally cray</p> -->
 				</header>
 				<nav id="nav">
 					<ul>
 						<li><a href="#one" class="active">About</a></li>
-						<li><a href="#two">A Few Accomplishments</a></li>
+						<li><a href="#two">A Few Career Highlights</a></li>
 						<li><a href="#three">Things I Can Do</a></li>
 						<li><a href="#four">Contact</a></li>
 					</ul>
 				</nav>
 				<footer>
 					<ul class="icons">
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="https://github.com/joeconstantino" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a href="mailto:joe@constantino.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 				</footer>
 			</section>
@@ -52,11 +49,10 @@
 								<div class="container">
 									<header class="major">
 										<!-- <h2>Read Only</h2> -->
-										<p>header text</p>
 									</header>
 									<p>Welcome to my personal website. I created this space as a hub for sharing my professional and personal interests, accomplishments, and ideas. It’s one part resume, one part portfolio, one part blog.</p>
 									<p></p>
-									<p>I am a product manager at Tableau/Salesforce working at the intersection of data analytics, AI, and Search. These domains have largely been my focus since my time at the University of Michigan, where I studied Data Science, to my first internship at a search start up in Tel Aviv, though my recent launch of Tableau Agent. </p>
+									<p>I am a product manager at Tableau/Salesforce working at the intersection of data analytics, AI, and Search. These domains have largely been my focus since my time at the University of Michigan, where I studied Data Science, to my first internship at a search start up in Tel Aviv, through my recent launch of Tableau Agent. </p>
 									<p></p>
 									<p>I love working with motivated, high-agency people, and I’m optimistic about a future in which we exploit technological process it increase human flourishing.</p>
 								</div>
@@ -83,7 +79,7 @@
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="" alt="" /></a>
 											<div class="inner">
 												<h4>TAMID Fellow</h4>
 												<p>During a summer internship at Cymbio. Built a classifier leveraging dense vector embeddings in order to improve the quality, accuracy, and utility of product recommendations in Cymbio’s affiliate retail stores.</p>
@@ -206,10 +202,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 												</ol>
 												<h5>Icons</h5>
 												<ul class="icons">
-													<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-													<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-													<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-													<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
+													<li><a href="https://github.com/joeconstantino" class="icon brands fa-github"><span class="label">Github</span></a></li>
 													<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
 													<li><a href="#" class="icon brands fa-tumblr"><span class="label">Tumblr</span></a></li>
 												</ul>
