--- a/index.html
+++ b/index.html
@@ -65,18 +65,19 @@
 									<!-- <p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p> -->
 									<div class="highlights">
 										<article>
-											<a href="#" class="image"><img src="images/tab_agent.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Delivered Tableau Agent</h4>
 												<p>Built and launched a conversational AI assistant to help anyone do data analysis in Tableau. Leveraged recent advancements in large language models, vector search, and retrieval augmented generation and scaled the product from proof of concept to pilot to GA.</p>
 											</div>
+											<a href="#" class="image"><img src="/images/tab_agent.png" alt="" /></a>
+
 										</article>
 										<article>
-											<a href="#" class="image"><img src="next_frontier.png" alt="" /></a>
 											<div class="inner">
 												<h4>Next Frontier</h4>
 												<p>Founded a short-lived AI consultancy to educate LA-based businesses in the B2C and B2B sectors about the AI landscape and help them plan the implementation of their own AI-driven products and services.</p>
 											</div>
+											<a href="#" class="image"><img src="/images/next_frontier.png" alt="" /></a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="" alt="" /></a>
